--- a/robotics.css
+++ b/robotics.css
@@ -1,105 +1,5 @@
 body { margin: 0;
-font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
-height: 100%;
-background: url('roboticbg.png') no-repeat fixed center;
-background-size: contain}
+height: 100%;}
 html { 
     height: 100%;
     }
-#container { position: absolute;
-	background: #008bc0;
-	color: #fff;
-	width: 250px;
-	left:10px;
-	top:10px;
-	bottom:43px;
-	font-size: 12px;
-	padding:10px;
-	border-radius:10px;
-}
-#footer {
-	bottom: 0;
-	position: absolute;
-	height: 10px;
-}
-
-#sep {
-height:30px;
-}
-.item {
-transition: .25s ease-in-out;
--moz-transition: .25s ease-in-out;
--webkit-transition: .25s ease-in-out;
-margin-top:15px;
-margin-bottom:15px;
-border-radius:10px;
-height:40px;
-padding-top:4px;
-width:270px;
-text-align:center;
-margin-left:-10px;
-color:white;
-}
-
-.item:hover {background: #33aef3;
-box-shadow: 0px 0px 10px #33aef3, inset 0px 0px 10px #008bc0;
-}
-
-.auto {width:270px;}
-
-.page {
-border-radius:0 3px 3px 0;
-border: 1px solid #777;
-box-shadow: 1px 1px 2px #777, inset 1px 1px 2px #777;
-overflow-x:hidden;
-}
-
-#whoweare {
-position:absolute;
-top:50;
-bottom:83;
-left:280;
-width:5px;
-background:rgba(204,204,204,.7);
-z-index:10000;
-}
-
-#whatwedo {
-position:absolute;
-top:45;
-bottom:78;
-left:280;
-width:10px;
-background:rgba(153,153,153,.7);
-z-index:999;
-}
-
-#whenweplay {
-position:absolute;
-top:40;
-bottom:73;
-left:280;
-width:15px;
-background:rgba(85,85,85,.7);
-z-index:10;
-}
-
-#contact {
-position:absolute;
-color:white;
-font-size:15px;
-bottom:58px;
-left:145px;
-}
-
-.content {
-width:100%;
-height:100%;
-opacity:0;
-overflow-x:hidden;
-margin-left:10px;
-}
-
-a:hover, a:link, a:visited, a:active {
-	color: white;
-	}
